--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-    "name": "my-app",
-    "version": "1.0.0",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js",
-      "hdeploy": "git add . && git commit -m 'deploy to heroku' && git push heroku main"
-    },
-    "dependencies": {
-      "express": "^4.18.2"
-    }
+  "name": "my-app",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "deploy": "git add . && git commit -m 'deploy to heroku' && git push heroku main"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
-  
+}
