--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "concurrently \"npm:dev:build\" \"npm:dev:run\"",
     "lint": "npx eslint . --ext .ts",
     "format": "npx prettier --write .",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "deploy": "git add . && git commit -m 'heroku deploy' && git push heroku main"
   },
   "keywords": [
     "telegram",
@@ -30,5 +31,8 @@
     "prettier": "^3.2.5",
     "@typescript-eslint/parser": "^7.9.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
