--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/node": "^20.12.12",
-    "@types/telegram-web-app": "^7.2.1", 
-    "typescript": "^5.4.5",
-    "nodemon": "^3.1.0",
-    "concurrently": "^8.2.2",
-    "eslint": "^8.57.0", 
-    "prettier": "^3.2.5",
+    "@types/telegram-web-app": "^7.2.1",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
-    "@typescript-eslint/eslint-plugin": "^7.9.0"
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "express": "^4.18.2"
