--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
     "dev:build": "npx tsc -w",
     "dev:run": "nodemon dist/index.js",
     "dev": "concurrently \"npm:dev:build\" \"npm:dev:run\"",
     "lint": "npx eslint . --ext .ts",
     "format": "npx prettier --write .",
     "heroku-postbuild": "npm run build",
+    "compileTSC": "tsc public/script.ts --outDir dist",
     "deploy": "git add . && git commit -m 'heroku deploy' && git push heroku main"
   },
   "keywords": [
