--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "serve": "^14.2.3"
+    "serve": "^14.2.3",
+    "express": "^4.18.2"
   }
 }
