--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "replace-in-file": "^8.3.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "serve": "^14.2.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "serve": "^14.2.3"
   }
 }
