--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/script.js",
   "type": "module",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc && cp -r carriers_data dist/",
     "dev:run": "node server.js",
     "dev": "npm run build && npm run dev:run",
     "lint": "npx eslint . --ext .ts",
