--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "lib": ["DOM", "ES2020"], // Add "DOM" for browser environment, like Telegram Mini App
   
       /* Modules */
-      "module": "ES6",        // Output ES Modules (import/export)
+      "module": "CommonJS",
       "rootDir": "./", // Specify the root directory of input files
       // "resolveJsonModule": true, // Enable importing .json files
   
